# pybind11-demo

./: .gitignore  README.txt
docker/: Dockerfile  build.ps1  run.ps1
workspace/: CMakeLists.txt  build.sh  compute.cpp  functions.h  main.cpp  main_1.cpp  person.cpp  person.h  sum.cpp  test.py
workspace/test/: test_omp  test_omp.cpp
